# pykemon_battle

./: .flake8  CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml  tox.ini
.github/workflow/: tests.yml
.github/workflows/: tests.yml
src/pykemon_battle/: __init__.py  battle.py  interface.py  move.py  player.py  pokemon.py  team.py
src/pykemon_battle/utils/: __init__.py  battle_dynamics.py  console.py  constants.py  terminal_background.py  text_display.py  utilities.py
tests/: test_Pokemon.py  test_pokemon_class.py  test_utils.py
