[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pykemon_battle"
author = "Michalis Panayides"
author-email = "PanayidesM@cardiff.ac.uk"
home-page = "https://github.com/11michalis11/pykemon_battle"
requires-python = ">=3.7"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

[tool.pylint.messages_control]
max-line-length = 88
disable = "missing-module-docstring"
